--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,8 +1,11 @@
 NotBlank={0} é obrigatório
 NotNull={0} é obrigatório
 PositiveOrZero={0} deve ser um valor maior ou igual a zero
+Email={0} deve ser um endereço de e-mail válido
 Multiplo={0} deve ser um valor múltiplo de {1}
 ValorZeroIncluiDescricao={1} deve conter {2}
+typeMismatch.java.time.OffsetDateTime={0} deve ser uma data/hora válida
+typeMismatch.java.lang.Long={0} deve ser um número válido
 
 # Cozinha
 cozinha.id=Código da cozinha
@@ -15,6 +18,7 @@ NotNull.restauranteInput.cozinha={0} é obrigatória
 restauranteInput.nome=Nome do restaurante
 restauranteInput.cozinha=Cozinha do restaurante
 restauranteInput.taxaFrete=Taxa de frete do restaurante
+restaurante.id=Código do restaurante
 
 # Estado
 estado.id=Código do estado
@@ -25,10 +29,11 @@ estadoInput.nome=Nome do estado
 cidadeInput.nome=Nome da cidade
 cidadeInput.estado=Estado da cidade
 
-# FormaPagamento
+# Forma de pagamento
 NotBlank.formaPagamentoInput.descricao={0} é obrigatória
 formaPagamentoInput.id=Código da forma de pagamento
 formaPagamentoInput.descricao=Descrição da forma de pagamento
+formaPagamento.id=Código da forma de pagamento
 
 # Endereco
 endereco=Endereço
@@ -48,9 +53,11 @@ usuarioComSenhaInput.nome=Nome do usuário
 usuarioComSenhaInput.email=E-mail do usuário
 usuarioComSenhaInput.senha=Senha do usuário
 
+NotBlank.usuarioInput.senha={0} é obrigatória
 usuarioInput.nome=Nome do usuário
 usuarioInput.email=E-mail do usuário
 
+# Senha
 NotBlank.senhaInput.senhaAtual={0} é obrigatória
 NotBlank.senhaInput.novaSenha={0} é obrigatória
 senhaInput.senhaAtual=Senha atual
@@ -77,6 +84,8 @@ enderecoEntrega.cidade.id=Código da cidade do endereço de entrega
 enderecoEntrega.cep=CEP do endereço de entrega
 enderecoEntrega.bairro=Bairro do endereço de entrega
 
-#
-restaurante.id=Código do restaurante
-formaPagamento.id=Código da forma de pagamento
+# Pedido Filter
+pedidoFilter.dataCriacaoInicio=Data inicial de criação do pedido
+pedidoFilter.dataCriacaoFim=Data final de criação do pedido
+pedidoFilter.clienteId=Código do cliente
+pedidoFilter.restauranteId=Código do restaurante
